Alteração na clsse Program Incluso as opções de questões do menu.

--- a/TrabalhoOrientacaoObjetos01.Testes/TrabalhoOrientacaoObjetos01.Testes.csproj
+++ b/TrabalhoOrientacaoObjetos01.Testes/TrabalhoOrientacaoObjetos01.Testes.csproj
@@ -22,6 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Questao03\" />
+    <Folder Include="Questao02\" />
     <Folder Include="Questao01\" />
   </ItemGroup>
 
