--- a/TrabalhoOrientacaoObjetos01/TrabalhoOrientacaoObjetos01.csproj
+++ b/TrabalhoOrientacaoObjetos01/TrabalhoOrientacaoObjetos01.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Questao03\" />
+    <Folder Include="Questao02\" />
     <Folder Include="Questao01\" />
   </ItemGroup>
 
