--- a/TrabalhoOrientacaoObjetos01/TrabalhoOrientacaoObjetos01.csproj
+++ b/TrabalhoOrientacaoObjetos01/TrabalhoOrientacaoObjetos01.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,7 +10,6 @@
   <ItemGroup>
     <Folder Include="Questao03\" />
     <Folder Include="Questao02\" />
-    <Folder Include="Questao01\" />
   </ItemGroup>
 
 </Project>
